# CarbonEdge

./: .gitignore  DEVNOTES.md  Dockerfile  README.md  id_rsa_khainguyen.pub  pyproject.toml  tier1.Dockerfile  tier2-ctx.yml
deploy-tier1/: helm-manual-inv-tier1.yaml
deploy-tier2/: deploy.yml  helm-manual-inv-tier2.yaml  helm-manual-inv.yaml
deploy-tier2/inv/: inv.yaml  local.yaml  secrets.yaml
deploy-tier2/tasks/: ubuntu.yml
src/sinfonia/: api_tier1.py  app_tier1.py  app_tier2.py  carbon.py  carbon_fetcher.py  carbonedge_carbon_history.py  carbonedge_carbon_log.py  carbonedge_config.py  carbonedge_energy_monitor.py  carbonedge_fetcher.py  cloudlets.py  geo_location.py  jobs.py  matchers.py
tests/: conftest.py  test_carbon.py
